--- a/menshop.html
+++ b/menshop.html
@@ -14,59 +14,57 @@
         <div class="product-list">
             <h2 class="ktiba">SHIRTS</h2>
             <div class="product">
-                <img src="./product1.jpg" alt="Product 1">
+                <img src="./product1.jpg" alt="black shirt">
                 <div class="product-info">
-                    <h3 class="ktiba">Product 1</h3>
+                    <h3 class="ktiba">black shirt</h3>
                     <p class="ktiba">$19.99</p>
-                    <button class="btn" onclick="addToCart('Product 1', 19.99)">Add to Cart</button>
+                    <button class="btn" onclick="addToCart('BLACK SHIRT', 19.99)">Add to Cart</button>
                 </div>
             </div>
             <div class="product">
-                <img src="./product2.jpg" alt="Product 2">
+                <img src="./product2.jpg" alt="blue shirt">
                 <div class="product-info">
-                    <h3 class="ktiba">Product 2</h3>
+                    <h3 class="ktiba">blue shirt</h3>
                     <p class="ktiba">$29.99</p>
-                    <button class="btn" onclick="addToCart('Product 2', 29.99)">Add to Cart</button>
+                    <button class="btn" onclick="addToCart('BLUE SHIRT', 29.99)">Add to Cart</button>
                 </div>
             </div>
             <div class="product">
-                <img src="./product3.jpg" alt="Product 3">
+                <img src="./product3.jpg" alt="grey shirt">
                 <div class="product-info">
-                    <h3 class="ktiba">Product 3</h3>
+                    <h3 class="ktiba">grey shirt</h3>
                     <p class="ktiba">$24.99</p>
-                    <button  class="btn" onclick="addToCart('Product 3', 24.99)">Add to Cart</button>
+                    <button  class="btn" onclick="addToCart('GREY SHIRT', 24.99)">Add to Cart</button>
                 </div>
             </div>
         </div>
     </div>
     <div class="shopping-cart">
-        <h2 class="ktiba2">MEN</h2>
         <div id="cart-items"></div>
-        <div id="cart-total">Total: $0.00</div>
         <div class="product-list">
-            <h2 class="ktiba">SHIRTS</h2>
+            <h2 class="ktiba">SHORTS</h2>
             <div class="product">
-                <img src="./product4.jpg" alt="Product 1">
+                <img src="./product4.jpg" alt="Product 4">
                 <div class="product-info">
-                    <h3 class="ktiba">Product 4</h3>
+                    <h3 class="ktiba">white short</h3>
                     <p class="ktiba">$19.99</p>
-                    <button class="btn" onclick="addToCart('Product 1', 19.99)">Add to Cart</button>
+                    <button class="btn" onclick="addToCart('WHITE SHORT', 19.99)">Add to Cart</button>
                 </div>
             </div>
             <div class="product">
-                <img src="./product5.jpg" alt="Product 2">
+                <img src="./product5.jpg" alt="Product 5">
                 <div class="product-info">
-                    <h3 class="ktiba">Product 5</h3>
+                    <h3 class="ktiba">green short</h3>
                     <p class="ktiba">$29.99</p>
-                    <button class="btn" onclick="addToCart('Product 2', 29.99)">Add to Cart</button>
+                    <button class="btn" onclick="addToCart('GREEN SHORT', 29.99)">Add to Cart</button>
                 </div>
             </div>
             <div class="product">
-                <img src="./product6.jpg" alt="Product 3">
+                <img src="./product6.jpg" alt="Product 6">
                 <div class="product-info">
-                    <h3 class="ktiba">Product 6</h3>
+                    <h3 class="ktiba">brown short</h3>
                     <p class="ktiba">$24.99</p>
-                    <button  class="btn" onclick="addToCart('Product 3', 24.99)">Add to Cart</button>
+                    <button  class="btn" onclick="addToCart('BROWN SHORT', 24.99)">Add to Cart</button>
                 </div>
             </div>
         </div>
