--- a/kidsshop.html
+++ b/kidsshop.html
@@ -14,32 +14,32 @@
         <div class="product-list">
             <h2 class="ktiba">SHIRTS</h2>
             <div class="product">
-                <img src="./product7.jpg" alt="Product 1">
+                <img src="./kids1.jpg" alt="Product 1">
                 <div class="product-info">
                     <h3 class="ktiba">Product 1</h3>
                     <p class="ktiba">$19.99</p>
-                    <button class="btn" onclick="addToCart('Product 1', 19.99)">Add to Cart</button>
+                    <button class="btn" onclick="addToCart('kids1', 19.99)">Add to Cart</button>
                 </div>
             </div>
             <div class="product">
-                <img src="./product8.jpg" alt="Product 2">
+                <img src="./kids2.jpg" alt="Product 2">
                 <div class="product-info">
                     <h3 class="ktiba">Product 2</h3>
                     <p class="ktiba">$29.99</p>
-                    <button class="btn" onclick="addToCart('Product 2', 29.99)">Add to Cart</button>
+                    <button class="btn" onclick="addToCart('kids2', 29.99)">Add to Cart</button>
                 </div>
             </div>
             <div class="product">
-                <img src="./product9.jpg" alt="Product 3">
+                <img src="./kids3.jpg" alt="Product 3">
                 <div class="product-info">
                     <h3 class="ktiba">Product 3</h3>
                     <p class="ktiba">$24.99</p>
-                    <button  class="btn" onclick="addToCart('Product 3', 24.99)">Add to Cart</button>
+                    <button  class="btn" onclick="addToCart('kids3', 24.99)">Add to Cart</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="womenshop.js"></script>
+    <script src="kidsshop.js"></script>
 </body>
 </html>
