--- a/womenshop1.html
+++ b/womenshop1.html
@@ -12,35 +12,35 @@
         <div id="cart-items"></div>
         <div id="cart-total">Total: $0.00</div>
         <div class="product-list">
-            <h2 class="ktiba">SHIRTS</h2>
+            <h2 class="ktiba">DRESSES</h2>
             <div class="product">
-                <img src="dress1.webp" alt="Product 1">
+                <img src="./women1.jpg" alt="Product 10">
                 <div class="product-info">
-                    <h3 class="ktiba">Product 1</h3>
+                    <h3 class="ktiba">red dress</h3>
                     <p class="ktiba">$19.99</p>
-                    <button class="btn" onclick="addToCart('Product 1', 19.99)">Add to Cart</button>
+                    <button class="btn" onclick="addToCart('women1', 19.99)">Add to Cart</button>
                 </div>
             </div>
             <div class="product">
-                <img src="dress2.webp" alt="Product 2">
+                <img src="./women2.jpg" alt="Product 11">
                 <div class="product-info">
-                    <h3 class="ktiba">Product 2</h3>
+                    <h3 class="ktiba">white dress</h3>
                     <p class="ktiba">$29.99</p>
-                    <button class="btn" onclick="addToCart('Product 2', 29.99)">Add to Cart</button>
+                    <button class="btn" onclick="addToCart('women2', 29.99)">Add to Cart</button>
                 </div>
             </div>
             <div class="product">
-                <img src="dress3.jpg" alt="Product 3">
+                <img src="./women3.jpg" alt="Product 12">
                 <div class="product-info">
-                    <h3 class="ktiba">Product 3</h3>
+                    <h3 class="ktiba">black dress</h3>
                     <p class="ktiba">$24.99</p>
-                    <button  class="btn" onclick="addToCart('Product 3', 24.99)">Add to Cart</button>
+                    <button  class="btn1" onclick="addToCart('women3', 24.99)">Add to Cart</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="menshop.js"></script>
+    <script src="womenshop.js"></script>
     <!-- the jewelery section-->
 </body>
 </html>
