--- a/arouani.html
+++ b/arouani.html
@@ -18,8 +18,8 @@
   <li><a href="./menshop.html" onclick="toggleVerticalColumn()">MEN</a></li>
   <li><a href="./womenshop1.html">WOMEN</a></li>
   <li><a href="./kidsshop.html ">CHILDREN</a></li>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><li><a href="#sign up">SIGN UP</a></li>
-  <li><a href="#login">LOGIN</a></li>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><li><a href="./signup.html">SIGN UP</a></li>
+  <li><a href="./login.html">LOGIN</a></li>
 </ul>
 <!-- Horizontal Navbar -->
 <div class="horizontal-navbar" id="horizontalNavbar">
@@ -65,7 +65,7 @@
     <p class="p2">Beyond our dedication to design, we proudly support causes close to our hearts. A percentage of every purchase goes towards initiatives in Palestine, empowering communities and fostering positive change. Join us in making a difference, one stylish step at a time with Arouani.</p>
   </div>
 </div>
-<footer class="footer">
+<footer id="about" class="footer">
   <div class="container">
     <div class="row">
       <div class="footer-col">
@@ -88,17 +88,16 @@
       <div class="footer-col">
         <h4>online shop</h4>
         <ul>
-          <li><a href="">MEN</a></li>
-          <li><a href="">WOMEN</a></li>
-          <li><a href="">CHILDREN</a></li>
+          <li><a href="./menshop.html">MEN</a></li>
+          <li><a href="./womenshop1.html">WOMEN</a></li>
+          <li><a href="./kidsshop.html">CHILDREN</a></li>
         </ul>
       </div>
       <div class="footer-col">
         <h4>follow us</h4>
         <div class="social-links">
-          <a href=""><i class="fab fa-facebook-f"></i></a>
-          <a href=""><i class="fab fa-tiktok"></i></a>
-          <a href=""><i class="fab fa-instagram"></i></a>
+          <a href="https://www.tiktok.com/@arouani.tn"><i class="fab fa-tiktok"></i></a>
+          <a href="https://www.instagram.com/arouani.tn"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
     </div>
