--- a/womenshop1.html
+++ b/womenshop1.html
@@ -16,7 +16,7 @@
             <div class="product">
                 <img src="./women1.jpg" alt="Product 10">
                 <div class="product-info">
-                    <h3 class="ktiba">red dress</h3>
+                    <h3 class="ktiba">white dress</h3>
                     <p class="ktiba">$19.99</p>
                     <button class="btn" onclick="addToCart('women1', 19.99)">Add to Cart</button>
                 </div>
@@ -24,7 +24,7 @@
             <div class="product">
                 <img src="./women2.jpg" alt="Product 11">
                 <div class="product-info">
-                    <h3 class="ktiba">white dress</h3>
+                    <h3 class="ktiba">green dress</h3>
                     <p class="ktiba">$29.99</p>
                     <button class="btn" onclick="addToCart('women2', 29.99)">Add to Cart</button>
                 </div>
@@ -32,7 +32,7 @@
             <div class="product">
                 <img src="./women3.jpg" alt="Product 12">
                 <div class="product-info">
-                    <h3 class="ktiba">black dress</h3>
+                    <h3 class="ktiba">purple dress</h3>
                     <p class="ktiba">$24.99</p>
                     <button  class="btn1" onclick="addToCart('women3', 24.99)">Add to Cart</button>
                 </div>
