--- a/kidsshop.html
+++ b/kidsshop.html
@@ -16,7 +16,7 @@
             <div class="product">
                 <img src="./kids1.jpg" alt="Product 1">
                 <div class="product-info">
-                    <h3 class="ktiba">Product 1</h3>
+                    <h3 class="ktiba">white shirt</h3>
                     <p class="ktiba">$19.99</p>
                     <button class="btn" onclick="addToCart('kids1', 19.99)">Add to Cart</button>
                 </div>
@@ -24,7 +24,7 @@
             <div class="product">
                 <img src="./kids2.jpg" alt="Product 2">
                 <div class="product-info">
-                    <h3 class="ktiba">Product 2</h3>
+                    <h3 class="ktiba">red shirt</h3>
                     <p class="ktiba">$29.99</p>
                     <button class="btn" onclick="addToCart('kids2', 29.99)">Add to Cart</button>
                 </div>
@@ -32,7 +32,7 @@
             <div class="product">
                 <img src="./kids3.jpg" alt="Product 3">
                 <div class="product-info">
-                    <h3 class="ktiba">Product 3</h3>
+                    <h3 class="ktiba">blue shirt</h3>
                     <p class="ktiba">$24.99</p>
                     <button  class="btn" onclick="addToCart('kids3', 24.99)">Add to Cart</button>
                 </div>
