--- a/signup.html
+++ b/signup.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Signup Page</title>
+  <title>Signup </title>
   <link rel="stylesheet" href="./signup.css"> <!-- Link to external CSS -->
   <link rel="icon" href="./1.jpeg">
+  <link rel="icon" href="./logo.jpeg">
 </head>
 <body class="a">
   <div class="container">
