--- a/womenshop1.html
+++ b/womenshop1.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopping Cart</title>
+    <title>Women shop</title>
     <link rel="stylesheet" href="womenshop.css">
+    <link rel="icon" href="./logo.jpeg">
 </head>
 <body>
     <div class="shopping-cart">
