--- a/arouani.html
+++ b/arouani.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 <link rel="stylesheet" href="./kidsshop.css">
 <link rel="stylesheet" href="./womenshop.css">
+<link rel="icon" href="./logo.jpeg">
 <body>
 <div class="teli">
 <!-- Toggle button for vertical navbar -->
